syntax = "proto3";

package docs;

option go_package = "docsbackend/proto; dpb";

service DocumentService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SendRecvNumbers (stream Number) returns (stream Number) {}
}


message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
message Number {
    int32 number = 1;
}
